--- a/hw9/fifteen.css
+++ b/hw9/fifteen.css
@@ -1,76 +1,54 @@
-/*B.*/
+/*
+	Chris Jimenez
+	CSE 154
+	Homework 8
+*/
+
+
+body {
+	text-align: center;
+}
 
 body, button {
 	font-family: cursive;
 	font-size: 14pt;
+}
+
+body {
 	text-align: center;
 }
 
-/* The area that holds the 15 puzzle pieces. */
 #puzzlearea {
 	font-size: 40pt;
-	width: 400px;
 	height: 400px;
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
+	width: 400px;
 }
 
-/* This class should be applied to each of the 15 puzzle pieces. */
-.puzzlepiece {
-	background-image: url(background.jpg);
-	border: 5px solid black;
-	width: 90px;
+.piece {
+	background-image: url('background.jpg');
+	border: solid black 5px;
+	cursor: default;
 	height: 90px;
 	position: absolute;
+	width: 90px;
+	/*
+	commented out to pass validator. This code is so the text in the divs won't be highlighted
+	when clicking quickly. It annoyed me.
+	
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+	*/
+	
 }
 
-/* This class should be applied to a puzzle piece that can be moved. */
-.movablepiece:hover {
+.canmove:hover {
 	border-color: red;
 	color: red;
+	cursor: pointer;
 }
-
-/* grading styles -- for TAs only; not required by students */
-#gradingarea {
-	position: fixed;
-	right: 0px;
-	top: 0px;
-	z-index: 999999;
-}
-
-.valid {
-	background-color: #bfb;
-}
-
-.invalid {
-	background-color: #f88;
-}
-
-/*
-init = function() {
-    var puzzleArea = document.getElementById('puzzlearea');
-    var divs = puzzleArea.getElementsByTagName("div");
-      
-    // initialize each piece
-    for (var i=0; i< divs.length; i++) {
-        var div = divs[i];
-        
-        // calculate x and y for this piece
-        var x = ((i % 4) * 100) ;
-        var y = (Math.floor(i / 4) * 100) ;
-
-        // set basic style and background
-        div.className = "puzzlepiece";
-        div.style.left = x + 'px';
-        div.style.top = y + 'px';
-        div.style.backgroundImage = 'url("background.jpg")';
-        div.style.backgroundPosition = -x + 'px ' + (-y) + 'px';
-        
-        // store x and y for later
-        div.x = x;
-        div.y = y; 
-    }        
-};
-*/
-
