--- a/hw9/fifteen.css
+++ b/hw9/fifteen.css
@@ -1,54 +1,39 @@
-/*
-	Chris Jimenez
-	CSE 154
-	Homework 8
-*/
-
-
-body {
-	text-align: center;
+body{
+    font-style: italic;
+    font-size: 14pt;
+    text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
-body, button {
-	font-family: cursive;
-	font-size: 14pt;
+
+div#puzzlearea{
+    height: 401px;
+    width: 400px;
+    margin: auto;
 }
 
-body {
-	text-align: center;
+div#puzzlearea > div {
+    font-size: 40pt;
+    height: 90px;
+    width: 90px;
+    line-height: 90px;
+    border-width: 5px !important;
+    border-style: solid;
+    border-color: black;
+    margin: 0;
+    padding: 0;
+    float: left;
+    background-image: url("background.jpg");
 }
 
-#puzzlearea {
-	font-size: 40pt;
-	height: 400px;
-	margin-left: auto;
-	margin-right: auto;
-	position: relative;
-	width: 400px;
+.movable:hover{
+    color: red;
+    border-color: red !important;
 }
 
-.piece {
-	background-image: url('background.jpg');
-	border: solid black 5px;
-	cursor: default;
-	height: 90px;
-	position: absolute;
-	width: 90px;
-	/*
-	commented out to pass validator. This code is so the text in the divs won't be highlighted
-	when clicking quickly. It annoyed me.
-	
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none;
-	*/
-	
-}
-
-.canmove:hover {
-	border-color: red;
-	color: red;
-	cursor: pointer;
+p#winpar{
+    font-weight: bold;
+    font-size: 30pt;
+    color: green;
 }
