--- a/hw9/fifteen.css
+++ b/hw9/fifteen.css
@@ -1,39 +1,85 @@
-body{
-    font-style: italic;
-    font-size: 14pt;
-    text-align: center;
-    padding: 0;
-    margin: 0;
+/*
+CSE 190 M, Homework 6 (Fifteen Puzzle) style sheet
+You should not modify this file.
+*/
+
+body {
+	background-color: white;
+	font-family: cursive;
+	font-size: 14pt;
 }
 
-
-div#puzzlearea{
-    height: 401px;
-    width: 400px;
-    margin: auto;
+#controls, #overall, #puzzlearea {
+	width: 400px;
 }
 
-div#puzzlearea > div {
-    font-size: 40pt;
-    height: 90px;
-    width: 90px;
-    line-height: 90px;
-    border-width: 5px !important;
-    border-style: solid;
-    border-color: black;
-    margin: 0;
-    padding: 0;
-    float: left;
-    background-image: url("background.jpg");
+#controls {
+	padding-top: 10px;
+	text-align: center;
 }
 
-.movable:hover{
-    color: red;
-    border-color: red !important;
+h1 {
+	margin: 10px 0px;
+	text-align: center;
 }
 
-p#winpar{
-    font-weight: bold;
-    font-size: 30pt;
-    color: green;
+/* Used to center the puzzle. */
+#overall {
+	margin-left: auto;
+	margin-right: auto;
 }
+
+/* The area that holds the 15 puzzle pieces. */
+#puzzlearea {
+	font-family: sans-serif;
+	font-size: 32pt;
+	height: 400px;
+	padding: 0px;
+	position: relative;
+}
+
+/* This class should be applied to each of the 15 puzzle pieces. */
+.puzzlepiece {
+	background-image: url(background.jpg);
+	background-repeat: no-repeat;
+	border: 2px solid black;
+	cursor: default;
+	height: 96px;
+	line-height: 96px;
+	/*position: absolute;*/
+	text-align: center;
+	vertical-align: middle;
+	width: 96px;
+}
+
+/* This class should be applied to a puzzle piece that can be moved. */
+.movablepiece:hover {
+	border: 2px solid red;
+	color: #006600;
+	text-decoration: underline;
+}
+
+#w3c {
+	text-align: right;
+}
+
+#w3c img {
+	border: none;
+}
+
+/* grading styles */
+#gradingarea {
+	position: fixed;
+	right: 0px;
+	top: 0px;
+	z-index: 999999;
+}
+
+.valid {
+	background-color: #bfb;
+}
+
+.invalid {
+	background-color: #f88;
+}
+
