--- a/hw9/fifteen.css
+++ b/hw9/fifteen.css
@@ -1,85 +1,31 @@
-/*
-CSE 190 M, Homework 6 (Fifteen Puzzle) style sheet
-You should not modify this file.
-*/
-
 body {
-	background-color: white;
-	font-family: cursive;
-	font-size: 14pt;
+    font-family: cursive;
+    font-size: 14pt;
+    text-align: center;
 }
 
-#controls, #overall, #puzzlearea {
-	width: 400px;
-}
-
-#controls {
-	padding-top: 10px;
-	text-align: center;
-}
-
-h1 {
-	margin: 10px 0px;
-	text-align: center;
-}
-
-/* Used to center the puzzle. */
-#overall {
-	margin-left: auto;
-	margin-right: auto;
-}
-
-/* The area that holds the 15 puzzle pieces. */
 #puzzlearea {
-	font-family: sans-serif;
-	font-size: 32pt;
-	height: 400px;
-	padding: 0px;
-	position: relative;
+    height: 400px;
+    margin: 0 auto;
+    position: relative;
+    width: 400px;
 }
 
-/* This class should be applied to each of the 15 puzzle pieces. */
-.puzzlepiece {
-	background-image: url(background.jpg);
-	background-repeat: no-repeat;
-	border: 2px solid black;
-	cursor: default;
-	height: 96px;
-	line-height: 96px;
-	/*position: absolute;*/
-	text-align: center;
-	vertical-align: middle;
-	width: 96px;
+.highlight {
+    border-color: red;
+    cursor: pointer;
 }
 
-/* This class should be applied to a puzzle piece that can be moved. */
-.movablepiece:hover {
-	border: 2px solid red;
-	color: #006600;
-	text-decoration: underline;
+.puzzletile {
+    background-image: url("background.jpg");
+    border: 5px solid black;
+    position: absolute;
 }
 
-#w3c {
-	text-align: right;
+.highlight, #output {
+    color: red;
 }
 
-#w3c img {
-	border: none;
+.puzzletile, #output {
+    font-size: 40pt;
 }
-
-/* grading styles */
-#gradingarea {
-	position: fixed;
-	right: 0px;
-	top: 0px;
-	z-index: 999999;
-}
-
-.valid {
-	background-color: #bfb;
-}
-
-.invalid {
-	background-color: #f88;
-}
-
